--- a/Thred/FeedView/User Search/Search Table/SearchProductTableViewCell.xib
+++ b/Thred/FeedView/User Search/Search Table/SearchProductTableViewCell.xib
@@ -17,18 +17,18 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SearchProductCell" rowHeight="102" id="KGk-i7-Jjw" customClass="SearchProductTableViewCell" customModule="Thred" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="399" height="101"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SearchProductCell" rowHeight="81" id="KGk-i7-Jjw" customClass="SearchProductTableViewCell" customModule="Thred" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="399" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="399" height="101"/>
+                <rect key="frame" x="0.0" y="0.0" width="399" height="80"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="0vO-vy-y0N">
-                        <rect key="frame" x="10" y="10" width="379" height="81"/>
+                        <rect key="frame" x="10" y="10" width="379" height="60"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JpX-Ua-p9q">
-                                <rect key="frame" x="0.0" y="0.0" width="55" height="81"/>
+                                <rect key="frame" x="0.0" y="0.0" width="55" height="60"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kgU-QD-v20">
                                         <rect key="frame" x="0.0" y="0.0" width="55" height="55"/>
@@ -46,13 +46,13 @@
                                 </constraints>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="kzP-Xy-dhQ">
-                                <rect key="frame" x="63" y="0.0" width="263" height="81"/>
+                                <rect key="frame" x="63" y="0.0" width="263" height="60"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Xh5-Yi-FBw">
-                                        <rect key="frame" x="0.0" y="0.0" width="144" height="56"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="144" height="35"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&quot;Product Name&quot;" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Bd3-8a-Urx">
-                                                <rect key="frame" x="0.0" y="0.0" width="144" height="28.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="144" height="17"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" priority="999" constant="30" id="x7o-UB-w7D"/>
                                                 </constraints>
@@ -60,10 +60,10 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="fZD-Vr-Fbh">
-                                                <rect key="frame" x="0.0" y="33.5" width="51.5" height="22.5"/>
+                                                <rect key="frame" x="0.0" y="22" width="51.5" height="13"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&quot;Price&quot;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="pxc-v8-jl3">
-                                                        <rect key="frame" x="0.0" y="0.0" width="51.5" height="22.5"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="51.5" height="13"/>
                                                         <fontDescription key="fontDescription" name="NexaW01-Heavy" family="NexaW01-Heavy" pointSize="15"/>
                                                         <color key="textColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <nil key="highlightedColor"/>
@@ -71,7 +71,7 @@
                                                 </subviews>
                                             </stackView>
                                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sl3-lv-cvi">
-                                                <rect key="frame" x="0.0" y="56" width="42" height="0.0"/>
+                                                <rect key="frame" x="0.0" y="35" width="42" height="0.0"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -79,7 +79,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jA1-Hb-RKB">
-                                        <rect key="frame" x="0.0" y="56" width="41" height="25"/>
+                                        <rect key="frame" x="0.0" y="35" width="41" height="25"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="7Yf-Mz-Nwr">
                                                 <rect key="frame" x="0.0" y="0.0" width="41" height="25"/>
@@ -124,10 +124,10 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="m89-om-2HG">
-                                <rect key="frame" x="334" y="0.0" width="45" height="81"/>
+                                <rect key="frame" x="334" y="0.0" width="45" height="60"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Qty." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wUm-RE-wRL">
-                                        <rect key="frame" x="0.0" y="0.0" width="45" height="39.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="45" height="29.5"/>
                                         <constraints>
                                             <constraint firstAttribute="height" priority="999" constant="30" id="4dp-c0-4Sn"/>
                                         </constraints>
@@ -136,7 +136,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="top" text="0" placeholder="0" textAlignment="center" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="jhw-uj-A7t">
-                                        <rect key="frame" x="0.0" y="39.5" width="45" height="41.5"/>
+                                        <rect key="frame" x="0.0" y="29.5" width="45" height="30.5"/>
                                         <color key="textColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" name="NexaW01-Heavy" family="NexaW01-Heavy" pointSize="17"/>
                                         <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
@@ -148,18 +148,41 @@
                             </stackView>
                         </subviews>
                     </stackView>
+                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ohU-6F-LDu">
+                        <rect key="frame" x="0.0" y="0.0" width="399" height="80"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Product Unavailable" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2GS-rN-SHD">
+                                <rect key="frame" x="0.0" y="0.0" width="399" height="80"/>
+                                <fontDescription key="fontDescription" name="NexaW01-Heavy" family="NexaW01-Heavy" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="2GS-rN-SHD" firstAttribute="leading" secondItem="ohU-6F-LDu" secondAttribute="leading" id="1sT-HQ-9dC"/>
+                            <constraint firstAttribute="bottom" secondItem="2GS-rN-SHD" secondAttribute="bottom" id="EYl-RK-lgo"/>
+                            <constraint firstAttribute="trailing" secondItem="2GS-rN-SHD" secondAttribute="trailing" id="XuD-dE-taJ"/>
+                            <constraint firstItem="2GS-rN-SHD" firstAttribute="top" secondItem="ohU-6F-LDu" secondAttribute="top" id="vb8-Ra-k0V"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
+                    <constraint firstItem="ohU-6F-LDu" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="C5b-eT-bm9"/>
                     <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="0vO-vy-y0N" secondAttribute="bottom" constant="10" id="Cnz-Vc-ifg"/>
+                    <constraint firstItem="ohU-6F-LDu" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="JHl-cc-p1q"/>
+                    <constraint firstAttribute="trailing" secondItem="ohU-6F-LDu" secondAttribute="trailing" id="SNB-ws-3RM"/>
                     <constraint firstAttribute="trailing" secondItem="0vO-vy-y0N" secondAttribute="trailing" constant="10" id="c1R-xf-KsX"/>
                     <constraint firstItem="0vO-vy-y0N" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="hEk-nv-bk9"/>
                     <constraint firstItem="0vO-vy-y0N" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="k4H-gr-2Hb"/>
+                    <constraint firstAttribute="bottom" secondItem="ohU-6F-LDu" secondAttribute="bottom" id="meh-kR-0wl"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="deletedView" destination="ohU-6F-LDu" id="cVr-B7-SUr"/>
                 <outlet property="likesLbl" destination="Rkd-AX-uGn" id="QmU-eT-dfS"/>
                 <outlet property="likesView" destination="7Yf-Mz-Nwr" id="ZKI-Q3-WRm"/>
                 <outlet property="priceLbl" destination="pxc-v8-jl3" id="q1p-Mp-ylD"/>
@@ -169,7 +192,7 @@
                 <outlet property="quantityView" destination="m89-om-2HG" id="lIN-nZ-HS4"/>
                 <outlet property="sizingLbl" destination="jK4-fR-ypc" id="XA4-qF-nj0"/>
             </connections>
-            <point key="canvasLocation" x="194.92753623188406" y="94.754464285714278"/>
+            <point key="canvasLocation" x="194.92753623188406" y="87.723214285714278"/>
         </tableViewCell>
     </objects>
     <resources>
